--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,9 @@
     height: 600px;
     background-color: #4d0f00;
     /*padding: 1px;*/
-    overflow: hidden;
-}
+    overflow: hidden; /*não vazar*/
+    filter: blur(2px);
+}   
 
 .frame{
     border: 50px solid black;
@@ -18,4 +19,26 @@
     height: 150px;
     background-color: #efb762;
     margin: 20px auto;
+    box-shadow: 0 0 3px 3px #efb762;
+}
+
+.two{
+    width: 475px;
+    height: 200px;
+    background-color: #8f0401;
+    margin: 0 auto 20px auto;
+    box-shadow: 0 0 3px 3px #8f0401;
+}
+
+.three{
+    width: 91%;
+    height: 28%;
+    background-color: #b20403;
+    margin: auto;
+    filter: blur(2px);
+    box-shadow: 0 0 5px 5px #b20403;
+}
+
+.one, .two{
+    filter: blur(1px);
 }
