--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@
     background-color: #efb762;
     margin: 20px auto;
     box-shadow: 0 0 3px 3px #efb762;
+    border-radius: 9px;
 }
 
 .two{
@@ -28,6 +29,10 @@
     background-color: #8f0401;
     margin: 0 auto 20px auto;
     box-shadow: 0 0 3px 3px #8f0401;
+    border-top-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
 .three{
@@ -37,6 +42,7 @@
     margin: auto;
     filter: blur(2px);
     box-shadow: 0 0 5px 5px #b20403;
+    border-radius: 30px 25px 60px 12px
 }
 
 .one, .two{
